remove lombok and work on assignment support